--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
           </head>
           
           <body>
-            <div class=e31_162><div  class="e31_183"></div><div  class="e31_172"></div><div  class="e31_179"></div><div class=e31_182><div  class="e31_180"></div><div  class="e31_181"></div></div><div  class="e40_2713"></div><div  class="e40_2714"></div><div  class="e40_2715"></div><div  class="e40_2716"></div><span  class="e40_2717">STORE</span><span  class="e40_2718">VIDEO</span><span  class="e40_2719">LIFE</span><span  class="e40_2720">B.G.M</span><span  class="e40_2721">STORE</span><span  class="e40_2722">VIDEO</span></div>
+            <div class=e31_162><div  class="e31_183"></div><div  class="e31_172"></div><div  class="e31_179"></div><div class=e31_182><div  class="e31_180"></div><div  class="e31_181"></div></div><div  class="e40_2713"></div><div  class="e40_2714"></div><div  class="e40_2715"></div><div  class="e40_2716"></div><span  class="e40_2717">STORE</span><span  class="e40_2718">VIDEO</span><a href="https://disneyyy.github.io/life/"><span  class="e40_2719">LIFE</span></a><span  class="e40_2720">B.G.M</span><a href="https://disneyyy.github.io/store/"><span  class="e40_2721">STORE</span></a><a href="https://chou-pei-tung.github.io/video/"><span  class="e40_2722">VIDEO</span></a></div>
           </body>
           </html>
